Chrome is weird (scrollbar fix).

--- a/projects/webserver/static/css/base.css
+++ b/projects/webserver/static/css/base.css
@@ -8,6 +8,8 @@ html, body {
     padding: 0;
     font-family: system-ui;
     font-size: 15px;
+    overflow-y: auto;
+    scrollbar-gutter: stable;
 }
 th, td {
     padding: 2px 0;
